# todo-tauri

./: .env.example  .gitignore  LINUX_SETUP.md  README.md  TEST_RESULTS.md  USAGE.md  index.html  main.js  package-lock.json  package.json  run-dev.sh  styles.css  vite.config.ts
src/: App.vue  env.d.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: todo
src-tauri/src/: main.rs
src/components/: FilterBar.vue  SettingsModal.vue  TodoInput.vue  TodoItem.vue  TodoList.vue
src/composables/: useSettings.ts  useTauri.ts  useToast.ts  useTodos.ts
src/types/: index.ts
